# informatics

./: CMakeLists.txt  README.md
conditional-operator/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
data-types/sets/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
data-types/structures/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  K.cpp  L.cpp
data-types/symbols-and-lines/task-conditions/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  K.cpp  L.cpp  M.cpp  N.cpp  Q.cpp  R.cpp
data-types/whole-numbers/: A.cpp  C.cpp  D.cpp  F.cpp
