cmake_minimum_required(VERSION 3.22)
project(informatics)

set(CMAKE_CXX_STANDARD 20)

add_executable(conditional-operator-A conditional-operator/A.cpp)
add_executable(conditional-operator-B conditional-operator/B.cpp)
add_executable(conditional-operator-C conditional-operator/C.cpp)
add_executable(conditional-operator-D conditional-operator/D.cpp)
add_executable(conditional-operator-E conditional-operator/E.cpp)
add_executable(conditional-operator-F conditional-operator/F.cpp)
add_executable(conditional-operator-G conditional-operator/G.cpp)
add_executable(conditional-operator-H conditional-operator/H.cpp)
add_executable(conditional-operator-I conditional-operator/I.cpp)
add_executable(conditional-operator-J conditional-operator/J.cpp)
add_executable(conditional-operator-K conditional-operator/K.cpp)

add_executable(data-types-whole-numbers-A data-types/whole-numbers/A.cpp)
add_executable(data-types-whole-numbers-C data-types/whole-numbers/C.cpp)
add_executable(data-types-whole-numbers-D data-types/whole-numbers/D.cpp)
add_executable(data-types-whole-numbers-F data-types/whole-numbers/F.cpp)

add_executable(data-types-structures-A data-types/structures/A.cpp)
add_executable(data-types-structures-B data-types/structures/B.cpp)
add_executable(data-types-structures-C data-types/structures/C.cpp)
add_executable(data-types-structures-D data-types/structures/D.cpp)
add_executable(data-types-structures-E data-types/structures/E.cpp)
add_executable(data-types-structures-F data-types/structures/F.cpp)
add_executable(data-types-structures-G data-types/structures/G.cpp)
add_executable(data-types-structures-H data-types/structures/H.cpp)
add_executable(data-types-structures-I data-types/structures/I.cpp)
add_executable(data-types-structures-K data-types/structures/K.cpp)
add_executable(data-types-structures-L data-types/structures/L.cpp)

add_executable(data-types-sets-A data-types/sets/A.cpp)
add_executable(data-types-sets-B data-types/sets/B.cpp)
add_executable(data-types-sets-C data-types/sets/C.cpp)
add_executable(data-types-sets-D data-types/sets/D.cpp)
add_executable(data-types-sets-E data-types/sets/E.cpp)

add_executable(data-types-symbols-and-lines-task-conditions-A data-types/symbols-and-lines/task-conditions/A.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-B data-types/symbols-and-lines/task-conditions/B.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-C data-types/symbols-and-lines/task-conditions/C.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-D data-types/symbols-and-lines/task-conditions/D.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-E data-types/symbols-and-lines/task-conditions/E.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-F data-types/symbols-and-lines/task-conditions/F.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-G data-types/symbols-and-lines/task-conditions/G.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-H data-types/symbols-and-lines/task-conditions/H.cpp)
add_executable(data-types-symbols-and-lines-task-conditions-I data-types/symbols-and-lines/task-conditions/I.cpp)